Fix #17824 - [Feature] Add activity list to characts, list values and quality entities

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -1,4 +1,5 @@
 
+path.activitylist                        = Activit\u00E9s
 path.aging                               = Vieillissement
 path.alcoholbeveragecontainers           = Conteneurs de boisson alcoolis\u00E9e
 path.allergens                           = Allerg\u00E8nes
