--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -20,53 +20,234 @@ button.delete-aspect      = Supprimer l'aspect
 button.duplicate          = Dupliquer
 button.new-row            = Ajouter
 
-data.boolean.false            = Non
-data.boolean.true             = Oui
-data.list.allergenList        = Allerg\u00E8nes
-data.list.budgetList          = Budget
-data.list.compoList           = Composition
-data.list.controlDefList      = Contr\u00F4les
-data.list.costList            = Co\u00FBt
-data.list.deliverableList     = Livrable
-data.list.dynamicCharactList  = Caract\u00E9ristiques calcul\u00E9es
-data.list.expenseList         = D\u00E9penses
-data.list.ingLabelingList     = Etiquetage
-data.list.ingList             = Ingr\u00E9dients
-data.list.invoiceList         = Facturation
-data.list.labelClaimList      = All\u00E9gations
-data.list.labelingRuleList    = R\u00E8gles d'\u00E9tiquetages
-data.list.lcaList             = ACV
-data.list.logTimeList         = Temps pass\u00E9
-data.list.nutList             = Nutriments
-data.list.organoList          = Organoleptique
-data.list.packMaterialList    = Mat\u00E9riaux
-data.list.packagingList       = Emballages
-data.list.physicoChemList     = Physico-chimiques
-data.list.priceList           = Prix d'achat
-data.list.processList         = Process
-data.list.propertyVariantList = Propri\u00E9t\u00E9s variantes
-data.list.pubChannelList      = Canaux de publication
-data.list.reqCtrlList         = Exigences non respect\u00E9es
-data.list.resourceParamList   = Param\u00E8tres ressource
-data.list.scoreList           = Evaluations
-data.list.taskList            = T\u00E2ches
-data.state.analysis           = Orientation
-data.state.archived           = Archiv\u00E9
-data.state.cancelled          = Annul\u00E9
-data.state.classification     = Classification
-data.state.closed             = Ferm\u00E9
-data.state.closing            = Cl\u00F4ture
-data.state.completed          = Termin\u00E9
-data.state.inprogress         = En cours
-data.state.new                = Nouveau
-data.state.onhold             = en attente
-data.state.planned            = Planifi\u00E9
-data.state.refused            = Refus\u00E9
-data.state.response           = R\u00E9ponse
-data.state.simulation         = Simulation
-data.state.tovalidate         = A valider
-data.state.treatment          = Traitement
-data.state.valid              = Valid\u00E9
+data.boolean.false                            = Non
+data.boolean.true                             = Oui
+data.list.activitylist                        = Activit\u00E9s
+data.list.aging                               = Vieillissement
+data.list.alcoholBeverageContainer            = Conteneurs de boisson alcoolis\u00E9e
+data.list.allergen                            = Allerg\u00E8nes
+data.list.allergenList                        = Allerg\u00E8nes
+data.list.allergentypes                       = Types d'allerg\u00E8nes
+data.list.approvalnumbers                     = Num\u00E9ros d'agr\u00E9ment
+data.list.batch                               = Ordres de fabrication
+data.list.bioOrigin                           = Origines biologiques
+data.list.budgetList                          = Budget
+data.list.catchareacodes                      = Zones de capture
+data.list.catchmethodcodes                    = M\u00E9thodes de capture
+data.list.certification                       = Certifications
+data.list.characts                            = Caract\u00E9ristiques
+data.list.claimdistributionnetworks           = R\u00E9seaux de distribution
+data.list.claimorigin_hierarchy               = Processus responsable de la r\u00E9clamation
+data.list.claimresponsestates                 = Etats r\u00E9ponse
+data.list.claimsources                        = Sources des remont\u00E9es
+data.list.claimtrackingvalues                 = Suivis demand\u00E9s
+data.list.claimtypes                          = Types de r\u00E9clamations
+data.list.classcodes                          = Codes classe
+data.list.client_hierarchy                    = Hi\u00E9rarchie des clients
+data.list.clients                             = Clients
+data.list.cltemperatures                      = Temp\u00E9ratures
+data.list.companies                           = Soci\u00E9t\u00E9s
+data.list.compliant                           = Conforme
+data.list.compoList                           = Composition
+data.list.config                              = Configurations
+data.list.contactList                         = Contacts
+data.list.contacttypes                        = Types de contact
+data.list.controlDefList                      = Contr\u00F4les
+data.list.controlcharacts                     = Caract\u00E9ristiques de contr\u00F4le
+data.list.controlmethods                      = M\u00E9thodes de contr\u00F4le
+data.list.controlplans                        = Plans de contr\u00F4le
+data.list.controlpoints                       = Points de contr\u00F4le
+data.list.controlsteps                        = Etapes de contr\u00F4le
+data.list.controltypes                        = Types de contr\u00F4le
+data.list.controlunits                        = Unit\u00E9s de contr\u00F4le
+data.list.cost                                = Co\u00FBts
+data.list.costList                            = Co\u00FBt
+data.list.customsCode                         = Codes douaniers
+data.list.datacarriertypecode                 = Types de code \u00E0 barres
+data.list.deliverableList                     = Livrable
+data.list.dutyFeeTax                          = Taxes
+data.list.dynamicCharactList                  = Caract\u00E9ristiques calcul\u00E9es
+data.list.eco                                 = Ordres de modifications
+data.list.ecoreports                          = Rapports sur les OM
+data.list.exchange                            = Echange
+data.list.expenseList                         = D\u00E9penses
+data.list.exportallergens                     = Export des allerg\u00E8nes
+data.list.exportciteo                         = Export des mat\u00E9riaux d'emballage (Citeo)
+data.list.exportcompositionpackaging          = Export des listes composition et emballages
+data.list.exportinglist                       = Export des ingr\u00E9dients
+data.list.exportlabelclaimlist                = Export des all\u00E9gations
+data.list.exportlabelling                     = Export de l'\u00E9tiquetage
+data.list.exportncsynthesis                   = Synth\u00E8se des non conformit\u00E9s
+data.list.exportnutrients                     = Export des nutriments
+data.list.exportphysicochemicallist           = Export des physico-chimiques
+data.list.exportproducts                      = Export des produits
+data.list.exportqualitycontrols               = Export des contr\u00F4les qualit\u00E9
+data.list.exportsupplierscontacts             = Export des contacts fournisseurs
+data.list.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
+data.list.geoOrigin                           = Origines g\u00E9ographiques
+data.list.gs1_hierarchy                       = Hi\u00E9rarchie GS1
+data.list.handlinginstructions                = Instructions de manutention
+data.list.hazardcategories                    = Classes de danger
+data.list.hazardstatements                    = Mentions de danger
+data.list.import                              = Import
+data.list.importfailed                        = Trait\u00E9 avec \u00E9chec
+data.list.importlog                           = Journaux
+data.list.importsamples                       = Exemples
+data.list.importsucceeded                     = Trait\u00E9 avec succ\u00E8s
+data.list.importtodo                          = A retravailler
+data.list.importtotreat                       = A traiter
+data.list.importuser                          = Import d'utilisateurs
+data.list.ing                                 = Ingr\u00E9dients
+data.list.ingLabelingList                     = Etiquetage
+data.list.ingList                             = Ingr\u00E9dients
+data.list.ingTypeItem                         = Cat\u00E9gories d'ingr\u00E9dient r\u00E9glementaires
+data.list.invoiceList                         = Facturation
+data.list.label                               = Mentions
+data.list.labelClaim                          = All\u00E9gations
+data.list.labelClaimList                      = All\u00E9gations
+data.list.labelclaimtypes                     = Types d'all\u00E9gation
+data.list.labelingRuleList                    = R\u00E8gles d'\u00E9tiquetages
+data.list.labelingTemplate                    = Patrons de marquage
+data.list.labelingpositions                   = Position du marquage
+data.list.labelingtypes                       = Types de marquage
+data.list.labeltypes                          = Types de mention
+data.list.lca                                 = Analyses de cycle de vie
+data.list.lcaList                             = ACV
+data.list.lcadatabases                        = Bases de donn\u00E9es ACV
+data.list.lcalistmethods                      = M\u00E9thodes de mesures des ACV
+data.list.lcaunits                            = Unit\u00E9s ACV
+data.list.localsemifinishedproduct_hierarchy  = Hi\u00E9rarchie des semi-finis locaux
+data.list.logTimeList                         = Temps pass\u00E9
+data.list.logoimage.changeOrder               = Logo
+data.list.logoimage.client                    = Logo
+data.list.logoimage.finishedproduct           = Produit
+data.list.logoimage.localsemifinishedproduct  = Produit
+data.list.logoimage.packagingmaterial         = Produit
+data.list.logoimage.rawmaterial               = Produit
+data.list.logoimage.semifinishedproduct       = Produit
+data.list.logoimage.supplier                  = Logo
+data.list.mapping                             = Mapping
+data.list.meattype                            = Types de viande (QUID)
+data.list.microbio                            = Caract\u00E9ristiques microbiologiques
+data.list.microbiocontrolsteps                = Etapes de contr\u00F4le microbio
+data.list.microbiotype                        = Type de caract\u00E9ristiques microbiologiques
+data.list.microbiounits                       = Unit\u00E9s microbiologie
+data.list.noncompliant                        = Non conforme
+data.list.nonconformity                       = Non conformit\u00E9s
+data.list.nut                                 = Nutriments
+data.list.nutList                             = Nutriments
+data.list.nutfactsmethods                     = M\u00E9thodes de mesures des nutriments
+data.list.nutgroup                            = Groupes de nutriments
+data.list.nutrientprofiles                    = Profils nutritionnels
+data.list.nutritionaldatabases                = Bases de donn\u00E9es nutritionnelles
+data.list.nuttype                             = Types de nutriments
+data.list.onucodes                            = Codes ONU
+data.list.organo                              = Caract\u00E9ristiques organoleptiques
+data.list.organoList                          = Organoleptique
+data.list.packMaterial                        = Mat\u00E9riaux
+data.list.packMaterialList                    = Mat\u00E9riaux
+data.list.packagingList                       = Emballages
+data.list.packaginggroupcodes                 = Codes groupe emballage
+data.list.packagingkit_hierarchy              = Hi\u00E9rarchie des kits d'emballages
+data.list.packaginglevels                     = Niveaux de packaging
+data.list.packagingmaterial_hierarchy         = Hi\u00E9rarchie des emballages
+data.list.packagingrecyclingschemecode        = Sch\u00E9mas de tri
+data.list.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
+data.list.packagingtypecode                   = Types d'emballage
+data.list.pallettypecode                      = Types de support palette
+data.list.personalprotection                  = Equipements de protection individuelle
+data.list.physicoChemList                     = Physico-chimiques
+data.list.physicochem                         = Caract\u00E9ristiques physico-chimiques
+data.list.physicotype                         = Type de physico-chimiques
+data.list.physicounits                        = Unit\u00E9s physico-chimiques
+data.list.pictograms                          = Pictogrammes
+data.list.plant                               = Usines
+data.list.platformtermsandconditionscodes     = Reutilisations support palette 
+data.list.pmmaterials                         = Mat\u00E9riaux d'emballage
+data.list.pmprinttypes                        = Type d'impression
+data.list.pmprintvarnishs                     = Vernis
+data.list.precautionOfUse                     = Pr\u00E9cautions d\u2019emploi
+data.list.precautionarystatements             = Conseils de prudence
+data.list.preparationtype                     = Types de pr\u00E9paration
+data.list.priceList                           = Prix d'achat
+data.list.processList                         = Process
+data.list.processStep                         = Etapes Process
+data.list.productcollection_hierarchy         = Hi\u00E9rarchie des collections
+data.list.producthierarchy                    = Hi\u00E9rarchie des produits
+data.list.productimage                        = Produit
+data.list.productmicrobiocriteria             = Crit\u00E8res microbiologiques
+data.list.productreportclienttemplate         = Fiche Technique Client
+data.list.productreportcosttemplate           = Fiche Co\u00FBts
+data.list.productreportproductiontemplate     = Fiche Technique Production
+data.list.productreportrdtemplate             = Fiche R&D
+data.list.productreportsuppliertemplate       = Fiche Fournisseur
+data.list.productreporttechnicalsheettemplate = Fiche Technique
+data.list.productreporttemplates              = Rapports de fiche produit
+data.list.products                            = Produits
+data.list.productspecifications               = Sp\u00E9cifications produit
+data.list.producttemplates                    = Mod\u00E8les de produits
+data.list.propertyVariantList                 = Propri\u00E9t\u00E9s variantes
+data.list.propertycatalogs                    = Catalogues de propri\u00E9t\u00E9s
+data.list.pubChannel                          = Canaux de publications
+data.list.pubChannelList                      = Canaux de publication
+data.list.quality                             = Qualit\u00E9
+data.list.qualitycontrol                      = Contr\u00F4les qualit\u00E9
+data.list.qualitylist                         = Listes qualit\u00E9
+data.list.qualityreporttemplates              = Rapports qualit\u00E9
+data.list.qualityspecification                = Sp\u00E9cifications
+data.list.qualitytemplates                    = Mod\u00E8les qualit\u00E9
+data.list.rawmaterial                         = Mati\u00E8re premi\u00E8re
+data.list.rawmaterial_hierarchy               = Hi\u00E9rarchie des mati\u00E8res premi\u00E8res
+data.list.rawmaterialreporttemplate           = Fiche Technique Fournisseur
+data.list.referencing                         = R\u00E9f\u00E9rencement
+data.list.regulations                         = R\u00E9glementation
+data.list.regulatoryUsage                     = Usages r\u00E9glementaires
+data.list.reqCtrlList                         = Exigences non respect\u00E9es
+data.list.resourceParam                       = Param\u00E8tres ressource
+data.list.resourceParamList                   = Param\u00E8tres ressource
+data.list.resourceparamtypes                  = Types de param\u00E8tre ressource
+data.list.resourceproduct_hierarchy           = Hi\u00E9rarchie des ressources
+data.list.scoreList                           = Evaluations
+data.list.securitylist                        = Listes s\u00E9curit\u00E9
+data.list.sellingunitofmeasure                = Unit\u00E9s de mesure utilis\u00E9e pour la Facture
+data.list.semifinishedproduct_hierarchy       = Hi\u00E9rarchie des semi-finis
+data.list.signedreport                        = Rapports sign\u00E9s
+data.list.simplifiedcomparisonreport          = Rapport de comparaison simpifi\u00E9
+data.list.sortingbonuscriteria                = Bonus tri
+data.list.sortingmaluscriteria                = Malus tri
+data.list.speciesforfishery                   = Esp\u00E8ce de poisson
+data.list.storageConditions                   = Conditions de conservation
+data.list.subsidiary                          = Filiales
+data.list.supplier_hierarchy                  = Hi\u00E9rarchie des fournisseurs
+data.list.supplierdocuments                   = Documents fournisseur
+data.list.supplierentities                    = Entit\u00E9s fournisseur
+data.list.suppliers                           = Fournisseurs
+data.list.svhcreasonsforinclusions            = Raisons de l'inclusion dans les SVHC
+data.list.targetMarket                        = March\u00E9s cibles
+data.list.taskList                            = T\u00E2ches
+data.list.tradeitemtradechannel               = Circuits de distribution
+data.list.tradeitemunitdescriptorcode         = Types d'unit\u00E9 commerciale
+data.list.trademark                           = Marques
+data.list.trademarktype                       = Types de marques
+data.list.variantcharacts                     = Caract\u00E9ristiques variantes
+data.list.workflowscripts                     = Scripts de workflow
+data.state.analysis                           = Orientation
+data.state.archived                           = Archiv\u00E9
+data.state.cancelled                          = Annul\u00E9
+data.state.classification                     = Classification
+data.state.closed                             = Ferm\u00E9
+data.state.closing                            = Cl\u00F4ture
+data.state.completed                          = Termin\u00E9
+data.state.inprogress                         = En cours
+data.state.new                                = Nouveau
+data.state.onhold                             = en attente
+data.state.planned                            = Planifi\u00E9
+data.state.refused                            = Refus\u00E9
+data.state.response                           = R\u00E9ponse
+data.state.simulation                         = Simulation
+data.state.tovalidate                         = A valider
+data.state.treatment                          = Traitement
+data.state.valid                              = Valid\u00E9
 
 date.format = dd/mm/yyyy
 
