Fix #20358 - [Feature] Add archiving project template

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -224,6 +224,9 @@ nutriscore.message.missingCharacts  = Calcul du Nutri-Score erronn\u00E9 car les
 plm.ecm.apply.version.label                             = Cr\u00E9\u00E9 par l''OM {0}
 plm.ecm.automatic.name                                  = OM Automatique {0,date,dd-MM-yyyy HH'h'mm}
 plm.ecm.current.name                                    = {0,date,dd-MM-yyyy HH'h'mm}
+plm.project.archive.deliverable.name                    = Livrable d'archivage
+plm.project.archive.task.name                           = T\u00E2che d'archivage
+plm.project.archive.tpl.name                            = Projet d'archivage
 plm.script.start-validation-workflow.js.message         = [Validation] - {0}
 plm.script.start-validation-workflow.js.title           = Validation
 plm.site.archived.title                                 = Produits archiv\u00E9s
