InProgress #21702 - [Feature] Add Survey auto-generation according to Pack Material

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -1,23 +1,26 @@
 
-survey_surveymodel.association.survey_nextQuestion.title      = Question suivante
-survey_surveymodel.association.survey_slChoices.title         = Choix retenu
-survey_surveymodel.association.survey_slQuestion.title        = Question
-survey_surveymodel.property.survey_questionCriterion.title    = Crit\u00E8re
-survey_surveymodel.property.survey_questionIsMandatory.title  = Obligatoire ?
-survey_surveymodel.property.survey_questionIsVisible.title    = Visible ?
-survey_surveymodel.property.survey_questionLabel.title        = Libell\u00E9
-survey_surveymodel.property.survey_questionLowerNote.title    = Note inf\u00E9rieure
-survey_surveymodel.property.survey_questionNote.title         = Note
-survey_surveymodel.property.survey_questionScore.title        = Score
-survey_surveymodel.property.survey_questionType.title         = Crit\u00E8res d'\u00E9valuation
-survey_surveymodel.property.survey_questionUpperNote.title    = Note sup\u00E9rieure
-survey_surveymodel.property.survey_questionUrl.title          = Url
-survey_surveymodel.property.survey_responseCommentLabel.title = Label du commentaire
-survey_surveymodel.property.survey_responseCommentType.title  = Type de commentaire
-survey_surveymodel.property.survey_responseType.title         = Type de r\u00E9ponse
-survey_surveymodel.property.survey_slComment.title            = Commentaire
-survey_surveymodel.property.survey_slResponse.title           = Autre r\u00E9ponse
-survey_surveymodel.type.survey_surveyList.description         = Permet d'ajouter un questionnaire sur une entit\u00E9
-survey_surveymodel.type.survey_surveyList.title               = Questionnaire
-survey_surveymodel.type.survey_surveyQuestion.description     = Questionnaires (Administration)
-survey_surveymodel.type.survey_surveyQuestion.title           = Questionnaires 
+survey_surveymodel.association.survey_fsLinkedCharactRefs.title = Charact\u00E9ristiques li\u00E9es
+survey_surveymodel.association.survey_fsLinkedHierarchy.title   = Familles li\u00E9es
+survey_surveymodel.association.survey_nextQuestion.title        = Question suivante
+survey_surveymodel.association.survey_slChoices.title           = Choix retenu
+survey_surveymodel.association.survey_slQuestion.title          = Question
+survey_surveymodel.property.survey_fsLinkedTypes.title          = Types d'entit\u00E9
+survey_surveymodel.property.survey_questionCriterion.title      = Crit\u00E8re
+survey_surveymodel.property.survey_questionIsMandatory.title    = Obligatoire ?
+survey_surveymodel.property.survey_questionIsVisible.title      = Visible ?
+survey_surveymodel.property.survey_questionLabel.title          = Libell\u00E9
+survey_surveymodel.property.survey_questionLowerNote.title      = Note inf\u00E9rieure
+survey_surveymodel.property.survey_questionNote.title           = Note
+survey_surveymodel.property.survey_questionScore.title          = Score
+survey_surveymodel.property.survey_questionType.title           = Crit\u00E8res d'\u00E9valuation
+survey_surveymodel.property.survey_questionUpperNote.title      = Note sup\u00E9rieure
+survey_surveymodel.property.survey_questionUrl.title            = Url
+survey_surveymodel.property.survey_responseCommentLabel.title   = Label du commentaire
+survey_surveymodel.property.survey_responseCommentType.title    = Type de commentaire
+survey_surveymodel.property.survey_responseType.title           = Type de r\u00E9ponse
+survey_surveymodel.property.survey_slComment.title              = Commentaire
+survey_surveymodel.property.survey_slResponse.title             = Autre r\u00E9ponse
+survey_surveymodel.type.survey_surveyList.description           = Permet d'ajouter un questionnaire sur une entit\u00E9
+survey_surveymodel.type.survey_surveyList.title                 = Questionnaire
+survey_surveymodel.type.survey_surveyQuestion.description       = Questionnaires (Administration)
+survey_surveymodel.type.survey_surveyQuestion.title             = Questionnaires 
