Fix #22173 - [Bug] Use short name instead of full name and set missing i18n translations

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -79,6 +79,9 @@ bcpg_bcpgmodel.property.bcpg_lkvValue.title                     = Valeur
 bcpg_bcpgmodel.property.bcpg_lvCode.title                       = Code
 bcpg_bcpgmodel.property.bcpg_lvValue.title                      = Valeur
 bcpg_bcpgmodel.property.bcpg_manualVersionLabel.title           = Etiquette de version manuelle
+bcpg_bcpgmodel.property.bcpg_modifiedCatalog1.title             = Date de modification du Catalogue 1
+bcpg_bcpgmodel.property.bcpg_modifiedCatalog2.title             = Date de modification du Catalogue 2
+bcpg_bcpgmodel.property.bcpg_modifiedCatalog3.title             = Date de modification du Catalogue 3
 bcpg_bcpgmodel.property.bcpg_nrConditions.title                 = Filtre avanc\u00E9
 bcpg_bcpgmodel.property.bcpg_nrDateField.title                  = Concernant la date
 bcpg_bcpgmodel.property.bcpg_nrForceNotification.title          = Envoyer m\u00EAme si aucun \u00E9l\u00E9ments
@@ -95,12 +98,15 @@ bcpg_bcpgmodel.property.bcpg_nrTimeType.title                   = Des changement
 bcpg_bcpgmodel.property.bcpg_nrVersionFilter.title              = Uniquement les changements de version
 bcpg_bcpgmodel.property.bcpg_parentLevel.title                  = Parent
 bcpg_bcpgmodel.property.bcpg_physicoChemCode.title              = Code caract\u00E9ristique physico-chimique
+bcpg_bcpgmodel.property.bcpg_regulatoryFormulatedDate.title     = Date de formulation r\u00E9glementaire
 bcpg_bcpgmodel.property.bcpg_sort.title                         = Tri
 bcpg_bcpgmodel.property.bcpg_startEffectivity.title             = D\u00E9but d'effectivit\u00E9
 bcpg_bcpgmodel.property.bcpg_stateActivityModified.title        = Date de dernier changement d'\u00E9tat
 bcpg_bcpgmodel.property.bcpg_userContentLocale.title            = Langue du contenu
 bcpg_bcpgmodel.property.bcpg_userLocale.title                   = Langue de l'interface
 bcpg_bcpgmodel.property.bcpg_variantIds.title                   = Variantes
+bcpg_bcpgmodel.property.pjt_lastNotificationDate.title          = Date de derni\u00E8re notification
+bcpg_bcpgmodel.property.rep_reportEntityGenerated.title         = Date de g\u00E9n\u00E9ration des rapports
 bcpg_bcpgmodel.type.bcpg_activityList.description               = Activit\u00E9s sur l'entit\u00E9
 bcpg_bcpgmodel.type.bcpg_activityList.title                     = Activit\u00E9s
 bcpg_bcpgmodel.type.bcpg_autoNum.description                    = Valeur de l'autonum
