Fix #22173 - [Bug] Use short name instead of full name and set missing i18n translations

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
@@ -82,6 +82,9 @@ bcpg_bcpgmodel.property.bcpg_lkvValue.title                     = Value
 bcpg_bcpgmodel.property.bcpg_lvCode.title                       = Code
 bcpg_bcpgmodel.property.bcpg_lvValue.title                      = Value
 bcpg_bcpgmodel.property.bcpg_manualVersionLabel.title           = Manual version label
+bcpg_bcpgmodel.property.bcpg_modifiedCatalog1.title             = Catalog 1 modified date
+bcpg_bcpgmodel.property.bcpg_modifiedCatalog2.title             = Catalog 2 modified date
+bcpg_bcpgmodel.property.bcpg_modifiedCatalog3.title             = Catalog 3 modified date
 bcpg_bcpgmodel.property.bcpg_nrConditions.title                 = Advanced filter
 bcpg_bcpgmodel.property.bcpg_nrDateField.title                  = Related to date field
 bcpg_bcpgmodel.property.bcpg_nrErrorLog.title                   = Error
@@ -99,12 +102,15 @@ bcpg_bcpgmodel.property.bcpg_nrTimeType.title                   = Changes
 bcpg_bcpgmodel.property.bcpg_nrVersionFilter.title              = Only changed version
 bcpg_bcpgmodel.property.bcpg_parentLevel.title                  = Parent
 bcpg_bcpgmodel.property.bcpg_physicoChemCode.title              = Physicochemical characteristic code
+bcpg_bcpgmodel.property.bcpg_regulatoryFormulatedDate.title     = Regulatory formulated date
 bcpg_bcpgmodel.property.bcpg_sort.title                         = Sort
 bcpg_bcpgmodel.property.bcpg_startEffectivity.title             = Start of effectivity
 bcpg_bcpgmodel.property.bcpg_stateActivityModified.title        = Date of last state change
 bcpg_bcpgmodel.property.bcpg_userContentLocale.title            = Content language
 bcpg_bcpgmodel.property.bcpg_userLocale.title                   = UI language
 bcpg_bcpgmodel.property.bcpg_variantIds.title                   = Variants
+bcpg_bcpgmodel.property.pjt_lastNotificationDate.title          = Last notification date
+bcpg_bcpgmodel.property.rep_reportEntityGenerated.title         = Report generated date
 bcpg_bcpgmodel.type.bcpg_activityList.description               = List of entity activities
 bcpg_bcpgmodel.type.bcpg_activityList.title                     = Activities
 bcpg_bcpgmodel.type.bcpg_autoNum.description                    = Auto number value
