Fix #22748 - [Feature] Add logs and errors during report infinite loop

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
@@ -86,6 +86,7 @@ message.formulate.failure.loop                             = Loop in formulation
 message.report.datasource.size                             = The datasource size ({0}) exceeds {1}
 message.report.error                                       = Error while generating report : {0}
 message.report.image.size                                  = The image ''{0}'' size ({1}) exceeds {2}
+message.report.infinite-loop                               = Infinite loop during report generation
 message.report.params.syntax                               = The report text parameters have a wrong syntax: {0}
 
 #Activities
