--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -82,6 +82,7 @@ message.formulate.failure.loop                             = Boucle dans la form
 message.report.datasource.size                             = La taille de la datasource ({0}) d\u00E9passe {1}
 message.report.error                                       = Erreur lors de la g\u00E9n\u00E9ration du rapport : {0}
 message.report.image.size                                  = La taille de l''image ''{0}'' ({1}) d\u00E9passe {2}
+message.report.infinite-loop                               = Boucle infinie durant la g\u00E9n\u00E9ration du rapport
 message.report.params.syntax                               = Les param\u00E8tres texte de rapport ont une mauvaise syntaxe : {0}
 
 #Activities
