Fix #17340 - [Feature] addition of the preoccupying substance and survey list

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -767,6 +767,12 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Oberfl\u00E4che des K\u00E4ses am Ende der Reifung
 
+svhc = BESORGNISERREGENDE STOFFE
+
+svhcListIng = Substanz
+
+svhcListQty = Menge (%)
+
 sweetnessLevelOfAlcoholicBeverage = S\u00FC\u00DFe Stufe des alkoholischen Getr\u00E4nks
 
 tare = Tara:
@@ -846,6 +852,8 @@ true = Ja
 type = Art
 
 typeParam = Parameter Typ
+
+typeSvhc = Art des SVHC
 
 uaPerPallet = Anzahl UA pro Palette
 
