--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
@@ -767,6 +767,12 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Surface of the cheese at the end of ripening
 
+svhc = SUBSTANCES OF CONCERN
+
+svhcListIng = Substance
+
+svhcListQty = Quantity (%)
+
 sweetnessLevelOfAlcoholicBeverage = Level of sweetness of the alcoholic beverage
 
 tare = Tare: 
@@ -846,6 +852,8 @@ true = Yes
 type = Type
 
 typeParam = Parameter type
+
+typeSvhc = Type of SVHC
 
 uaPerPallet = Number of UA per pallet
 
