--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
@@ -767,6 +767,12 @@ support = Apoyo
 
 surfaceOfCheeseAtEndOfRipeningCode = Superficie del queso al final de la maduraci\u00F3n
 
+svhc = SUSTANCIAS PREOCUPANTES
+
+svhcListIng = Sustancia
+
+svhcListQty = Cantidad (%)
+
 sweetnessLevelOfAlcoholicBeverage = Nivel de dulzor de la bebida alcoh\u00F3lica
 
 tare = Tara:
@@ -846,6 +852,8 @@ true = S\u00ED
 type = Tipo
 
 typeParam = Tipo de parametro
+
+typeSvhc = Tipo de SVHC
 
 uaPerPallet = N\u00FAmero de UA por palet
 
