--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -767,6 +767,12 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Surface du fromage en fin de maturation
 
+svhc = SUBSTANCES PR\u00C9OCCUPANTES
+
+svhcListIng = Substance
+
+svhcListQty = Quantit\u00E9 (%)
+
 sweetnessLevelOfAlcoholicBeverage = Niveau de douceur de la boisson alcoolis\u00E9e
 
 tare = Tare : 
@@ -846,6 +852,8 @@ true = Oui
 type = Type
 
 typeParam = Type de param\u00E8tre
+
+typeSvhc = Type de SVHC
 
 uaPerPallet = Nombre d'UA par palette
 
