--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -767,6 +767,12 @@ support = Supporto
 
 surfaceOfCheeseAtEndOfRipeningCode = Superficie del formaggio a fine maturazione
 
+svhc = SOSTANZE DI INTERESSE
+
+svhcListIng = Sostanza
+
+svhcListQty = Quantit\u00E0 (%)
+
 sweetnessLevelOfAlcoholicBeverage = Livello di dolcezza della bevanda alcolica
 
 tare = Tara:
@@ -846,6 +852,8 @@ true = s\u00EC
 type = genere
 
 typeParam = Tipo di parametro
+
+typeSvhc = Tipo di SVHC
 
 uaPerPallet = Numero di UA per pallet
 
