--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
@@ -767,6 +767,12 @@ support = Steun
 
 surfaceOfCheeseAtEndOfRipeningCode = Oppervlak van de kaas aan het einde van de rijping
 
+svhc = ZORGWEKKENDE STOFFEN
+
+svhcListIng = Stof
+
+svhcListQty = Hoeveelheid (%)
+
 sweetnessLevelOfAlcoholicBeverage = Mate van zoetheid van de alcoholische drank
 
 tare = Tarra: 
@@ -846,6 +852,8 @@ true = Ja
 type = Type
 
 typeParam = Type parameter
+
+typeSvhc = Type SVHC
 
 uaPerPallet = Aantal UA per pallet
 
