--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
@@ -767,6 +767,12 @@ support = Apoio, suporte
 
 surfaceOfCheeseAtEndOfRipeningCode = Superf\u00EDcie do queijo no fim da matura\u00E7\u00E3o
 
+svhc = SUBST\u00C2NCIAS QUE SUSCITAM PREOCUPA\u00C7\u00C3O
+
+svhcListIng = Subst\u00E2ncia
+
+svhcListQty = Quantidade (%)
+
 sweetnessLevelOfAlcoholicBeverage = N\u00EDvel de do\u00E7ura da bebida alco\u00F3lica
 
 tare = Tara:
@@ -846,6 +852,8 @@ true = sim
 type = Tipo
 
 typeParam = Tipo de par\u00E2metro
+
+typeSvhc = Tipo de SVHC
 
 uaPerPallet = N\u00FAmero de UA por palete
 
