--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -767,6 +767,12 @@ support = Support
 
 surfaceOfCheeseAtEndOfRipeningCode = Ostens yta i slutet av mognadsprocessen
 
+svhc = \u00C4MNEN SOM GER ANLEDNING TILL ORO
+
+svhcListIng = \u00C4mne
+
+svhcListQty = Kvantitet (%)
+
 sweetnessLevelOfAlcoholicBeverage = Den alkoholhaltiga dryckens s\u00F6thetsgrad
 
 tare = Tara:
@@ -846,6 +852,8 @@ true = Ja
 type = Typ
 
 typeParam = Parametertyp
+
+typeSvhc = Typ av SVHC
 
 uaPerPallet = Antal UA per pall
 
