--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -767,6 +767,12 @@ support = \u652F\u6301
 
 surfaceOfCheeseAtEndOfRipeningCode = \u6210\u719F\u672B\u671F\u7684\u5976\u916A\u8868\u9762
 
+svhc = \u5173\u6CE8\u7269\u8D28
+
+svhcListIng = \u7269\u8D28
+
+svhcListQty = \u6570\u91CF (%)
+
 sweetnessLevelOfAlcoholicBeverage = \u9152\u7CBE\u996E\u6599\u7684\u751C\u5EA6
 
 tare = \u76AE\u91CD\uFF1A 
@@ -846,6 +852,8 @@ true = \u662F\u7684
 type = \u7C7B\u578B
 
 typeParam = \u53C2\u6570\u7C7B\u578B
+
+typeSvhc = SVHC \u7C7B\u578B
 
 uaPerPallet = \u6BCF\u4E2A\u6258\u76D8\u7684UA\u6570\u91CF
 
