--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -767,6 +767,12 @@ support = Tuki
 
 surfaceOfCheeseAtEndOfRipeningCode = Juuston pinta kypsytyksen loppuvaiheessa
 
+svhc = HUOLTA AIHEUTTAVAT AINEET
+
+svhcListIng = Aine
+
+svhcListQty = M\u00E4\u00E4r\u00E4 (%)
+
 sweetnessLevelOfAlcoholicBeverage = alkoholijuoman makeustaso
 
 tare = Taara:
@@ -846,6 +852,8 @@ true = Kyll\u00E4
 type = Tyyppi
 
 typeParam = Parametrityyppi
+
+typeSvhc = SVHC-tyyppi
 
 uaPerPallet = UA-m\u00E4\u00E4r\u00E4 lukua kohti
 
